<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/foodstuff_card_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:tag="calc_keyboard_parent">
<FrameLayout
...

        <FrameLayout
            android:id="@+id/frame_layout_button_edit"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@+id/button_close"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/rectangular_button_click_selector"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
...
            android:layout_marginEnd="15dp"
            app:layout_constraintTop_toBottomOf="@id/nutrition_progress_with_values_parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/weight_in_card" />

        <korablique.recipecalculator.ui.calckeyboard.CalcEditText
            android:id="@+id/weight_edit_text"
            style="@style/RobotoMonoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="11.5dp"
            android:layout_marginEnd="11.5dp"
            app:layout_constraintTop_toBottomOf="@id/row_fake_top"
...
            custom:max_value="99999"
            custom:digits_after_decimal_dot="1"
            android:maxLength="30"
            tools:text="100" />

        <Button
            android:id="@+id/button2"
            style="@style/VioletLiningButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/weight_edit_text"
            app:layout_constraintBottom_toBottomOf="@id/constraint_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button1"
            android:text="@string/add_foodstuff"
            android:layout_marginTop="8dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="15dp"
            android:visibility="gone"
...
