...
        Жиры - %3$.1f\n
        Углеводы - %4$.1f\n
        Калорийность - %5$.1f\n</string>
    <string name="foodstuff_name_and_weight">%1$s, %2$.0f г</string>
    <string name="user_goal_finish_button_text">далее</string>
    <string name="top_header">Популярное</string>
    <string name="all_foodstuffs_header">Все продукты</string>
    <string name="foodstuffs">Продукты</string>
    <string name="profile">Профиль</string>
    <string name="create_new_foodstuff">Новый</string>
    <string name="weight_in_card">Масса, граммов</string>
    <string name="add_foodstuff">Добавить продукт</string>
    <string name="add_foodstuff_to_recipe">В рецепт</string>
    <string name="open_foodstuff_recipe">Рецепт</string>
    <string name="add_foodstuff_to_history">В журнал</string>
    <string name="include_to_sent_foodstuffs">К отправляемым</string>
    <string name="selected_foodstuffs_snackbar_title_recipe_creation">Создание рецепта</string>
    <string name="selected_foodstuffs_snackbar_title_recipe_editing">Редактирование рецепта</string>
    <string name="send_selected_foodstuffs_to_partner">Отправить продукты партнёру</string>
    <string name="bucket_list_title_recipe_creation">Новый рецепт</string>
    <string name="bucket_list_title_recipe_editing">Редактирование</string>
...
