<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:background="#EFF1F6">

    <TextView
        android:id="@+id/all_foodstuffs_header_text"
        style="@style/MontserratHeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingLeft="16dp"
        android:text="@string/all_foodstuffs_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/add_new_foodstuff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:paddingTop="7dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rectangular_button_click_selector">

        <TextView
            style="@style/RobotoMonoHintText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:lineSpacingMultiplier="1.30"
            android:paddingRight="10dp"
            android:text="@string/create_new_foodstuff" />

        <ImageView
            android:id="@+id/plus_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_blue_circle_plus" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
