...
        android:id="@+id/parners_buttons_divider"
        android:layout_width="50dp"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/send_foodstuff_to_partner_menu_button"
        app:layout_constraintBottom_toTopOf="@+id/create_recipe_menu_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/create_recipe_menu_button"
        android:layout_width="0dp"
...
