...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mode_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/snackbar"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_main_screen_modes"
        android:layout_margin="16dp"
...
